tests/res/dict/error_duplicate_number.say
// Value-equal literal keys collide statically, including numbers (1 == 1.0).
say d = { 1: "x", 1: "y" }; // error: Duplicate dict key '1'
